# Self-Correcting-Multi-Agent-AI-for-Automated-Data-Analysis

./: .gitignore  README.md
.claude/: settings.local.json
backend/: .env.example  Makefile  README.md  main.py  prompts_fallback.json  pyproject.toml  settings.json  test.py
backend/app/: server.py
backend/app/services/agent/: action_graph.py  bias_evaluator.py  forecast.py  graph.py  master.py  schemas.py  sub_agents.py  utils.py
backend/app/user/adapter/input/api/v1/: process.py
backend/celery_task/: __init__.py
backend/config/: agent_prompts.json
backend/core/: config.py
backend/core/db/: session.py
backend/core/fastapi/middlewares/: authentication.py
backend/core/helpers/: redis.py  token.py
backend/migrations/: env.py
backend/tests/core/helpers/: test_token.py
backend/tests/support/: test_db_coordinator.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analyze/: analyze-panel.tsx  page-layout.tsx  page.tsx
frontend/app/api/process/: route.ts
frontend/components/: settings-dialog.tsx
frontend/components/chat/: artifact-viewer.tsx  bio-spectrum.tsx  chat-input.tsx  chat-interface.tsx  chat-panel.tsx  header.tsx  message-bubble.tsx  no-session-state.tsx  persona-grid.tsx  streaming-bubble.tsx
frontend/components/graph/: custom-task-node.tsx  graph-layout.tsx  task-graph-view.tsx
frontend/components/ui/: nullable-number-input.tsx
frontend/hooks/: use-chat-stream.ts
frontend/lib/: chat-utils.ts  settings-types.ts
frontend/utils/: messageParser.tsx
(+1 files in other folders)
